@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-13-22
+2016-4-14 David Schneider
+- extend method_domain feature to get domain from attribute to support
+  Generic1D::ConfigV0 - JIRA PSAS-225	
+
 Tag: V00-13-21
 2016-4-14 David Schneider
 - add method_domain tag to hdf5 backend to generate code to tranlsate a
